@@ -82,9 +82,6 @@
     <string name="array_order_sign">星座</string>
     <string name="array_order_asc">昇順</string>
     <string name="array_order_desc">降順</string>
-    <string name="exit_dialog">本当に終了してもよろしいですか？</string>
-    <string name="exit_yes">はい</string>
-    <string name="exit_no">いいえ</string>
     <string name="statistics_fail_title">失敗ログ</string>
     <string name="log_cant_parse">解析できません %1$s</string>
     <string name="about_us_bt_changelog">ログの変更</string>
