@@ -92,9 +92,6 @@
     <string name="array_order_next">Dias para o próximo aniversário</string>
     <string name="array_order_sign">Signo</string>
     <string name="birthday_string">%1$s/%2$d</string>
-    <string name="exit_dialog">Você tem certeza que deseja sair?</string>
-    <string name="exit_yes">Sim</string>
-    <string name="exit_no">Não</string>
     <string name="statistics_fail_title">Log de falhas</string>
     <string name="log_cant_parse">Não foi possível entender %1$s</string>
     <string name="about_us_bt_changelog">Changelog</string>
