@@ -101,9 +101,6 @@
     <string name="array_order_sign">Sign</string>
     <string name="array_order_asc">Ascending</string>
     <string name="array_order_desc">Descending</string>
-    <string name="exit_dialog">Are you sure you want to exit?</string>
-    <string name="exit_yes">Yes</string>
-    <string name="exit_no">No</string>
     <string name="statistics_fail_title">Fail Log</string>
     <string name="log_cant_parse">Can\'t parse %1$s</string>
     <string name="about_us_bt_changelog">Changelog</string>
